Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/BRepBuilderAPI/BRepBuilderAPIMakeEdge.h

#ifndef BRepBuilderAPI_MakeEdge_H
#define BRepBuilderAPI_MakeEdge_H

#include "../../Export_Import.h"

extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor();
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor17F57B4B(
	void* V1,
	void* V2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor5C63477E(
	void* P1,
	void* P2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor9917D291(
	void* L);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor13A123E9(
	void* L,
	double p1,
	double p2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor89D07A8C(
	void* L,
	void* P1,
	void* P2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor1D47CBD(
	void* L,
	void* V1,
	void* V2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor727811A8(
	void* L);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorD1F21AD1(
	void* L,
	double p1,
	double p2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorF9002809(
	void* L,
	void* P1,
	void* P2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorE5C0731B(
	void* L,
	void* V1,
	void* V2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorAA0BF3BF(
	void* L);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorE07A45E0(
	void* L,
	double p1,
	double p2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorF09C8A36(
	void* L,
	void* P1,
	void* P2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor3CB9094F(
	void* L,
	void* V1,
	void* V2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorF96BFAD7(
	void* L);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor8CC08831(
	void* L,
	double p1,
	double p2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor23F161EC(
	void* L,
	void* P1,
	void* P2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor61331CF3(
	void* L,
	void* V1,
	void* V2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor4008A9E4(
	void* L);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor8DF7070E(
	void* L,
	double p1,
	double p2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorB18E1764(
	void* L,
	void* P1,
	void* P2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorFB0B4975(
	void* L,
	void* V1,
	void* V2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorFF608AE4(
	void* L);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorED53F64D(
	void* L,
	double p1,
	double p2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor442B1D85(
	void* L,
	void* P1,
	void* P2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Ctor1D50351E(
	void* L,
	void* V1,
	void* V2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorAFABB219(
	void* L,
	void* P1,
	void* P2,
	double p1,
	double p2);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_CtorA7D86004(
	void* L,
	void* V1,
	void* V2,
	double p1,
	double p2);
extern "C" DECL_EXPORT void BRepBuilderAPI_MakeEdge_InitFF608AE4(
	void* instance,
	void* C);
extern "C" DECL_EXPORT void BRepBuilderAPI_MakeEdge_InitED53F64D(
	void* instance,
	void* C,
	double p1,
	double p2);
extern "C" DECL_EXPORT void BRepBuilderAPI_MakeEdge_Init442B1D85(
	void* instance,
	void* C,
	void* P1,
	void* P2);
extern "C" DECL_EXPORT void BRepBuilderAPI_MakeEdge_Init1D50351E(
	void* instance,
	void* C,
	void* V1,
	void* V2);
extern "C" DECL_EXPORT void BRepBuilderAPI_MakeEdge_InitAFABB219(
	void* instance,
	void* C,
	void* P1,
	void* P2,
	double p1,
	double p2);
extern "C" DECL_EXPORT void BRepBuilderAPI_MakeEdge_InitA7D86004(
	void* instance,
	void* C,
	void* V1,
	void* V2,
	double p1,
	double p2);
extern "C" DECL_EXPORT bool BRepBuilderAPI_MakeEdge_IsDone(void* instance);
extern "C" DECL_EXPORT int BRepBuilderAPI_MakeEdge_Error(void* instance);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Edge(void* instance);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Vertex1(void* instance);
extern "C" DECL_EXPORT void* BRepBuilderAPI_MakeEdge_Vertex2(void* instance);
extern "C" DECL_EXPORT void BRepBuilderAPIMakeEdge_Dtor(void* instance);

#endif